restructure the files

--- a/toc.conf
+++ b/toc.conf
@@ -1,9 +1,8 @@
 [toc]
 introduction.math = Introduction
-set.math = Sets
+sets = Sets
 function.math = Functions
-natural.math = Naturals
+naturals = Naturals
 algebra.math = Algebra
 real_analysis.math = Real Analysis
-resources.math = Resources
 * = keep
