snapshot of updates

--- a/naturals/toc.conf
+++ b/naturals/toc.conf
@@ -1,6 +1,6 @@
 [toc]
-introduction.math = Introduction
-operations.math = Operations
-positive_naturals.math = Positive Naturals
-theorems.math = Theorems
-* = keep
+introduction.math = "Introduction"
+operations.math = "Operations"
+positive_naturals.math = "Positive Naturals"
+theorems.math = "Theorems"
+* = "keep"
