--- a/toc.conf
+++ b/toc.conf
@@ -1,9 +1,10 @@
 [toc]
-introduction.math = Introduction
-logic.math = Logic
-sets = Sets
-function.math = Functions
-naturals = Naturals
-algebra.math = Algebra
-real_analysis.math = Real Analysis
-* = keep
+introduction.math = "Introduction"
+logic.math = "Logic"
+sets = "Sets"
+function.math = "Functions"
+naturals = "Naturals"
+algebra = "Algebra"
+analysis = "Analysis"
+real_analysis.math = "Real Analysis"
+* = "keep"
