add more algebra content

--- a/mlg.conf
+++ b/mlg.conf
@@ -1,4 +1,6 @@
 [mlg.view]
 title = "Mathlore"
-description = "Mathlore is an open collaborative encyclopedia of mathematical knowledge encoded in the Mathlingua language."
-keywords = "math, mathematics, encyclopedia, language, proof, math language, mathematics language, mathematical language, mathematical"
+description = "Mathlore is an open collaborative encyclopedia of 
+               mathematical knowledge encoded in the Mathlingua language."
+keywords = "math, mathematics, encyclopedia, language, proof, math 
+            language, mathematics language, mathematical language, mathematical"
