--- a/toc.conf
+++ b/toc.conf
@@ -4,6 +4,8 @@ logic.math = "Logic"
 sets = "Sets"
 function.math = "Functions"
 naturals = "Naturals"
+integers.math = "Integers"
+rationals.math = "Rationals"
 algebra = "Algebra"
 analysis = "Analysis"
 real_analysis.math = "Real Analysis"
